# simple_trajectory

./: CHANGELOG.md  CMakeLists.txt  README.md  package.nom  package.xml  requirements.txt  setup.cfg  setup.py
cfg/: dynsimpletrajectory.cfg
launch/: start.launch
simple_trajectory/: node.py
src/: node.py  simple_trajectory.py
