<?xml version="1.0"?>
<package>
  <name>simple_trajectory</name>
  <version>0.2.0</version>
  <description>The simple_trajectory package</description>

  <maintainer email="klapajar@fel.cvut.cz">Jaroslav Klapálek</maintainer>

  <license>TODO</license>

  <author email="kopecdav@fel.cvut.cz">David Kopecký</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend libraries -->
  <build_depend>dynamic_reconfigure</build_depend>

  <!-- run_depend libraries -->
  <run_depend>rospy</run_depend>

  <!-- run_depend message types -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>
