<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_trajectory</name>
  <version>0.5.1</version>
  <description>
    This node is used to create a custom path using 'Publish Point' feature
    that is available in rViz.
  </description>

  <maintainer email="f1tenth@rtime.felk.cvut.cz">F1tenth CTU Community</maintainer>

  <license>GPLv3</license>

  <author email="kopecdav@fel.cvut.cz">David Kopecký</author>
  <author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

  <url type="repository">https://github.com/CTU-F1T/simple_trajectory</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend libraries -->
  <build_depend>dynamic_reconfigure</build_depend>

  <!-- exec_depend libraries -->
  <exec_depend>rospy</exec_depend>
  <exec_depend version_lte="1.16.0">python-numpy</exec_depend>
  <exec_depend version_lte="1.2.2">python-scipy</exec_depend>

  <!-- exec_depend message types -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <index url="git@github.com:CTU-F1T/simple_trajectory.git" />
  </export>
</package>
