<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_trajectory</name>
  <version>0.5.1</version>
  <description>
    This node is used to create a custom path using 'Publish Point' feature
    that is available in rViz.
  </description>

  <maintainer email="f1tenth@rtime.felk.cvut.cz">F1tenth CTU Community</maintainer>

  <license>GPLv3</license>

  <author email="kopecdav@fel.cvut.cz">David Kopecký</author>
  <author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

  <url type="repository">https://github.com/CTU-F1T/simple_trajectory</url>

  <!-- Build tool. -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <!-- Packages dependencies. -->
  <!-- Use exec_depend for Python dependencies, as the packages are required only when running. -->
  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rclpy</exec_depend>

  <exec_depend version_lte="1.16.0" condition="$ROS_VERSION == 1">python-numpy</exec_depend>
  <exec_depend version_lte="1.2.2" condition="$ROS_VERSION == 1">python-scipy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">python-scipy</exec_depend>

  <exec_depend version_gt="0.9.4">autopsy</exec_depend>

  <!-- exec_depend message types -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <index url="git@github.com:CTU-F1T/simple_trajectory.git" />
    <!-- ROS1 Build type -->
    <!-- Should not be required (as ROS1 defaults to catkin), but with the other dependency it is completely lost. -->
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <!-- ROS2 Build type -->
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>
</package>
